edits to  website on hugo

--- a/config.toml
+++ b/config.toml
@@ -17,9 +17,9 @@ paginate = 5
 	
 	analytics = "code-here"
 
-	email = "alexurquhart@gmail.com"
+	email = "dandia@usc.edu"
 
-	profilepic = "profile.jpg"
+	profilepic = "img/profile.jpg"
 	
 themesdir = "../.."
 	title = "Karina Dandia"
@@ -29,17 +29,10 @@ themesdir = "../.."
 	# Each of these are optional
 	[[params.socialbuttons]]
 	faicon = "github"
-	url = "https://github.com/alexurquhart"
-	[[params.socialbuttons]]
-	faicon = "twitter"
-	url = "https://twitter.com/alexanderurq"
+	url = "https://github.com/kdandia""
 	[[params.socialbuttons]]
 	faicon = "linkedin"
-	url = "https://linkedin.com"
-	[[params.socialbuttons]]
-	faicon = "google-plus"
-	url = "https://plus.google.com/+YourID"
-
+	url = "https://linkedin.com""
 	[[params.navlinks]]
 	name = "About"
 	url = "about"
